[package]
name = "connect-you-ports"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "~1.49", features = ["full"] }
chrono = { version = "~0.4" }
log = { version = "~0.4", features = ["std", "serde"] }
redis = { version = "~0.26", features = ["aio", "tokio-comp"] }
env_logger = { version = "~0.11" }
uuid = { version = "~1.20", features = ["v4", "serde"] }
sha1 = { version = "~0.10" }
serde = { version = "~1.0", features = ["derive"] }
bincode = { version = "~1.3" }
futures = { version = "~0.3" }
aes-gcm = { version = "~0.10" }
hex = { version = "~0.4" }
flate2 = { version = "~1.1" }
